--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -92,7 +92,7 @@
       .nav>li>a:hover {
           /*color: #e94632;*/
           /*background-color: red;*/
-          color:red;
+          color: red;
           background-color: white;
           /*border-bottom: 2px solid #e94632;*/
       }
@@ -227,9 +227,34 @@
           padding-bottom: 2%;
       }
       
-      .qrcode {
+      .footercontent {
+          width: 70%;
           height: 100px;
           padding-top: 2%;
+          margin: 0 auto;
+          text-align: left;
+      }
+      
+      .foottext {
+          width: 50%;
+          float: left;
+          line-height: 2;
+          font-size: 1.3em;
+          color: grey;
+      }
+      
+      .footimg {
+          float: right;
+      }
+      
+      .qrcode {
+          height: 80px;
+      }
+      
+      .foothr {
+          opacity: 0.3;
+          width: 65%;
+          margin-left: 0;
       }
       
       .carousel-inner > .item > img {
