--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -258,7 +258,7 @@
       
       .footercontent {
           width: 70%;
-          height: 100px;
+          /*height: 100px;*/
           padding-top: 1%;
           margin: 0 auto;
           text-align: left;
